# cryptocopter

./: .coverage  .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG  CLAUDE.md  CRASH_RECOVERY.md  Makefile  README.md  __init__.py  backtest.py  constants.py  crash_recovery_demo.py  gui.py  gui_elements.py  indicators.py  kivy_config.py  lib.py  log.py  logging_config.py  main.py  mypy.ini  pyproject.toml  pytest.ini  quickstart_example.db  requirements.txt  strategy_script.py  test_quickstart.db  test_trading.db  test_websocket_fix.py
.github/workflows/: ci.yml
config/: .db_config
docs/buy_dip/: BUY_DIP_CANDLE_STORAGE.md  BUY_DIP_CORRECTED_DESIGN.md  BUY_DIP_FINAL_DESIGN.md  BUY_DIP_IMPLEMENTATION_STATUS.md  BUY_DIP_KEY_INSIGHT.md  BUY_DIP_MATHEMATICAL_CONSTANTS.md  BUY_DIP_README_FIRST.md  BUY_DIP_STRATEGY_DESIGN.md  CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  INTEGRATION_COMPLETE.md  README.md  STRATEGY_PROGRESS.md  WALKTHROUGH.md
examples/: backtest_buy_dip.py
requirements/: develop.txt  production.txt
src/: backtest.py  broker.py  common.py  config.py  connection_monitor.py  connection_status_display.py  database.py  df_handler.py  features.py  gui_elements.py  identifiers.py  kivy_config.py  lib.py  logging.yaml  logging_config.py  main.py  order_handler.py  orders.py  portfolio_event_helper.py  position_buy.py  position_handler.py  position_sell.py  producers.py  socket_management.py  strategy_executor.py  trading_system.py  workers.py
src/backtest/: backtest.py  backtrader_check.py  data_retriever.py  lib.py  price_plot.py  signals.py  strategies.py  trade_analyzer.py
src/backtest/strategies/: rsi_basic.py  rsi_extended.py
src/broker/: __init__.py  message_handlers.py  spot.py
src/common/: client.py  common.py  constants.py  database.py  helpers.py  identifiers.py  initialize_trading_environment.py  orders.py  portfolio.py  shutdown_strategy_gracefully.py  symbol.py  symbol_info.py  websocket_config.py
src/database/: DATABASE_DESIGN.md  README.md  __init__.py  example_integration.py  exceptions.py  integration_example.py  migration.py  models.py  order_restorer.py  position_converter.py  position_manager.py  position_verifier.py  quickstart.py  recovery_service.py  test_trading_database.py  trading_database.py
src/df_handler/: futures.py  spot.py
src/domain/: constants.py  enums.py  events.py  inventory.py  orders.py  positions.py  subscriptions.py
src/features/: features.py  rsi_basic.py  rsi_extended.py  rsi_special.py
src/futures/: worker_futures.py
src/gui/: async_app.py  asyncapp.kv  asyncapp.py  coin_sniper.kv  coin_sniper.py  coinsniper.kv  coinsniper.py  common_widgets.kv  constants.py  gui_handler.py  hpfront.kv  hpfront.py  hpfront_backup.kv  hpfront_unified.kv  hpmanager.kv  hpmanager.py  identifiers.py  main.kv  main.py  portfolio.kv  portfolio.py  searchable_drop_down.kv  searchable_drop_down.py  setup.py  strategy_tab.kv  strategy_tab.py  strategylistitem.kv  strategytab.kv  strategytab.py  widgets.py
src/high_availability/: logger_config.py  monitor.py
src/identifiers/: common.py  futures.py  spot.py
src/order_handler/: futures.py  spot.py
src/portfolio/: __init__.py  inventory_manager.py  portfolio.kv  portfolio.py  portfolio_event_helper.py  portfolio_gui.py  usd_price_resolver.py
src/position_handler/: futures.py  spot.py
src/producers/: futures.py  producers.py  spot.py
src/recovery/: README.md  __init__.py  multihop_recovery_handler.py  order_restorer.py  position_converter.py  position_verifier.py  recovery_service.py
src/strategies/: base.py  coin_sniper.py  hp_manager.py  rsi_basic.py  rsi_extended.py  rsi_special.py
src/trading_system/: futures.py  spot.py
src/websocket/: __init__.py  config.py  manager.py
src/workers/: account.py  broker_spot.py  handle_account.py  handle_order.py  handle_signal.py  kline_handle.py  order.py  signal.py  state_actions.py  state_conditions.py  strategy_executor.py  trading_state_machine.py  worker.py  worker_futures.py  worker_spot.py  workers.py
tests/: common.py  conftest.py  futures.py  helpers.py  sample_dataframes.py  spot.py  test_backtest.py  test_feature_rsi_basic.py  test_feature_rsi_extended.py  test_features.py  test_full_scope.py  test_gui.py  test_hp_portfolio_communication.py  test_kline_handle.py  test_lib.py  test_manual_hp_cancellation_fixed.py  test_order_handle.py  test_orders.py  test_signal_handle.py  test_strategy_start.py
tests/broker/: __init__.py  test_message_handlers.py
tests/common/: test_client.py  test_symbol.py
tests/data/: __init__.py  historical_short.json  historical_short.txt  result_of_lib.get_historical_data.json  sample_data_for_rsi_calculactions.csv  sample_data_for_rsi_calculated.csv  sample_data_for_rsi_signals_generated.csv  sample_dataframes.py  signals_for_basic_rsi_generated.csv  signals_for_extended_rsi_generated.csv
tests/database/: test_database.py
tests/integration/: __init__.py  hp_portfolio_communication.py  hp_portfolio_communication_extended.py  hp_portfolio_lifecycle.py  test_connection_improvements.py  test_crash_recovery.py  test_hp_portfolio_communication.py  test_hp_portfolio_communication_extended.py  test_hp_portfolio_lifecycle.py  test_manual_hp_cancellation.py  test_new_websocket_architecture.py  test_real_crash_recovery.py  test_websocket_architecture.py  test_websocket_fix.py
tests/portfolio/: README_inventory_manager_tests.md  conftest.py  inventory_simulator.py  test_inventory_locking_recovery.py  test_inventory_manager.py  test_inventory_sell_e2e.py  test_portfolio.py  test_portfolio_event_helper.py  test_portfolio_gui_locking.py
tests/recovery/: conftest.py  test_recovery_modules.py
tests/strategies/: crash_recovery.py  hp_manager_helpers.py  hp_simulator.py  inventory_simulator.py  test_base_strategy.py  test_hp_manager.py  test_hp_manager_e2e.py  test_hp_manager_recovery_db.py  test_inventory_sell_e2e.py  test_rsi_basic.py  test_rsi_extended.py  test_rsi_special.py
tests/websocket/: conftest.py  test_websocket_manager.py
(+127 files in other folders)
