[project]
name = "cryptocopter"
version = "0.1.0"
description = "Async Binance spot trading bot with HP Manager and Buy Dip strategies"
requires-python = ">=3.12"
dependencies = [
    "python-kraken-sdk==3.3.0",
    "bta-lib==1.0.0",
    "pandas==3.0.3",
    "numpy==2.5.1",
    "transitions==0.9.3",
    "kivy==2.3.1",
    "aiosqlite==0.20.0",
    "sqlalchemy==2.0.51",
    "cryptography==49.0.0",
    "psutil==7.2.2",
    "python-decouple==3.8",
    "websockets==16.0",
]

[project.optional-dependencies]
dev = [
    "black==26.5.1",
    "mypy==2.1.0",
    "pylint==4.0.6",
    "pre-commit==4.6.0",
    "pyyaml==6.0.3",
    "matplotlib==3.11.0",
    "matplotlib-inline==0.2.2",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-mock==3.15.1",
    "pytest-cov==7.1.0",
    "coverage==7.15.0",
]

[tool.black]
target-version = ["py312"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
log_cli = true
log_format = "%(asctime)s  %(name)s  %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_level = "INFO"
addopts = ""
filterwarnings = [
    "ignore::FutureWarning",
    "ignore:.*WebSocketClientProtocol.*:DeprecationWarning",
    "ignore:.*websockets\\.legacy.*:DeprecationWarning",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "db: tests that use crash-recovery and heavy DB fixtures (slow, run separately)",
]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "src.backtest.*",
    "src.features.*",
    "src.strategies.buy_dip.backtester.*",
]
ignore_errors = true

# GUI / Kivy modules: callbacks are driven by the framework and cannot be
# annotated without Kivy stubs.  Exempt from disallow_untyped_defs.
[[tool.mypy.overrides]]
module = [
    "src.gui.*",
    "src.portfolio.portfolio_gui",
    "src.strategies.buy_dip.config_gui",
    "src.strategies.buy_dip.ui.*",
]
disallow_untyped_defs = false

# Tests and examples: strict annotations are not required here.
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "examples.*",
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["examples.backtest_buy_dip"]
ignore_errors = true
